# csv2ledger

./: .gitignore  .travis.yml  LICENSE  README.md  csv2ledger.cabal
.github/workflows/: haskell-ci.yml
src/: CSV2Ledger.hs  Csv2Ledger.hs
src/CSV2Ledger/: Camt.hs
src/Csv2Ledger/: Camt.hs
