name:          csv2ledger
version:       0
synopsis:      Convert accounting data from CSV to Ledger format
description:   Convert accounting data from CSV to Ledger format.
license:       BSD3
license-file:  LICENSE
author:        Peter Simons
maintainer:    simons@cryp.to
tested-with:   GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.3, GHC == 8.10.1
category:      Finance
homepage:      https://github.com/peti/csv2ledger
build-type:    Simple
cabal-version: >= 1.10

library
  exposed-modules:  Csv2Ledger
                    Csv2Ledger.Camt
  hs-source-dirs:   src
  build-depends:    base        < 5
                  , Decimal
                  , base-compat > 0.9
                  , bytestring
                  , cassava
                  , hledger-lib >= 1.19.1
                  , megaparsec
                  , mtl
                  , text
                  , time
                  , utf8-string
                  , vector
  default-language: Haskell2010
  other-extensions: OverloadedStrings
                    PackageImports
                    NoImplicitPrelude
  ghc-options:      -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                    -Wredundant-constraints
